[package]
name = "tiktok-video-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.138"
chrono = "0.4.39"
dialoguer = "0.11.0"
indicatif = "0.17.11"

[[bin]]
name = "tiktok-video-downloader"
path = "src/main.rs"